# SparkToPandas

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  ~$README.md
SparkToPandas/: pandas_plugin.py
docs/: conf.py
docs/_build/doctrees/: SparkToPandas.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  SparkToPandas.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/SparkToPandas/: SparkToPandas.html  pandas_plugin.html
docs/_build/html/_sources/: SparkToPandas.rst.txt  index.rst.txt  modules.rst.txt
examples/: pandas_plugin_example.py
src/SparkToPandas/: SparkToPandas.py
src/docs/: conf.py
src/docs/_build/doctrees/: SparkToPandas.doctree  environment.pickle  index.doctree  modules.doctree
src/docs/_build/html/: .buildinfo  SparkToPandas.html  index.html  search.html
src/docs/_build/html/_modules/: index.html
src/docs/_build/html/_sources/: SparkToPandas.rst.txt  index.rst.txt
