[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SparkToPandas"
version = "1.0.2"
authors = [
  { name="Govardhan Selvaraj", email="govardhan_selvaraj@yahoo.com" },
]
description = "A pyspark package with the syntax similar to pandas."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/govardhan26/SparkToPandas"
"Bug Tracker" = "https://github.com/govardhan26/SparkToPandas/issues"
"Donate" = "https://www.buymeacoffee.com/govardhan26"
"linkedin" = "https://www.linkedin.com/in/govardhan-selvaraj/"
"Docs" = "https://sparktopandas.readthedocs.io/en/latest/index.html"

